refactor: Unify run tracking into a single `mat_view_runs` table
Consolidates the separate `mat_view_create_runs`, `mat_view_refresh_runs`, and `mat_view_delete_runs` tables into a single `mat_view_runs` table.

This change simplifies the data model by introducing an `operation` column to distinguish between run types (`create`, `refresh`, `drop`).

This refactoring reduces code duplication across models, jobs, and tests, and simplifies querying for run history. All related documentation, migrations, and tests have been updated to reflect this new unified structure.

--- a/docs/pages/5.2 runs.md
+++ b/docs/pages/5.2 runs.md
@@ -9,9 +9,11 @@ permalink: /engine/runs
 
 Every materialized-view operation is recorded in a dedicated table so you can **audit**, **debug**, and **measure** performance over time.
 
-- **Create runs:** `mat_view_create_runs` → `MatViews::MatViewCreateRun`
-- **Refresh runs:** `mat_view_refresh_runs` → `MatViews::MatViewRefreshRun`
-- **Delete runs:** `mat_view_delete_runs` → `MatViews::MatViewDeleteRun`
+- **Create runs:**  `MatViews::MatViewRun`, operation type `:create`
+- **Refresh runs:** `MatViews::MatViewRun`, operation type `:refresh`
+- **Delete runs:**  `MatViews::MatViewRun`, operation type `:delete`
+
+{: .note}
 
 These rows are created and finalized by the corresponding **ActiveJob** wrappers:
 
@@ -44,12 +46,15 @@ Jobs set `started_at` / `finished_at` and compute `duration_ms` using a monotoni
 
 Below are the essential columns for each run table.
 
-### Create runs
+### Runs
+
+`MatViews::MatViewRun` has the following key attributes (columns):
 
 | Column                     | Type      | Notes                             |
 | -------------------------- | --------- | --------------------------------- |
 | `mat_view_definition_id`   | bigint FK | Required                          |
 | `status`                   | integer   | `pending/running/success/failed`  |
+| `operation`                | integer   | `create/refresh/drop`             |
 | `started_at`               | datetime  | Job start time                    |
 | `finished_at`              | datetime  | Job end time                      |
 | `duration_ms`              | integer   | Milliseconds (monotonic)          |
@@ -57,48 +62,13 @@ Below are the essential columns for each run table.
 | `meta`                     | jsonb     | Free-form: service payload/params |
 | `created_at`, `updated_at` | datetime  | Timestamps                        |
 
-Index: `index_mat_view_create_runs_on_mat_view_definition_id`
-
-### Refresh runs
-
-| Column                     | Type      | Notes                                                                 |
-| -------------------------- | --------- | --------------------------------------------------------------------- |
-| `mat_view_definition_id`   | bigint FK | Required                                                              |
-| `status`                   | integer   | `pending/running/success/failed`                                      |
-| `started_at`               | datetime  | Job start time                                                        |
-| `finished_at`              | datetime  | Job end time                                                          |
-| `duration_ms`              | integer   | Milliseconds (monotonic)                                              |
-| `rows_count`               | integer   | Optional; only when row count requested                               |
-| `error`                    | text      | Error message when failed                                             |
-| `meta`                     | jsonb     | Includes e.g. `{"view":"public.mv","row_count_strategy":"estimated"}` |
-| `created_at`, `updated_at` | datetime  | Timestamps                                                            |
-
-Index: `index_mat_view_refresh_runs_on_mat_view_definition_id`
-
-### Delete runs
-
-| Column                     | Type      | Notes                                                        |
-| -------------------------- | --------- | ------------------------------------------------------------ |
-| `mat_view_definition_id`   | bigint FK | Required                                                     |
-| `status`                   | integer   | `pending/running/success/failed`                             |
-| `started_at`               | datetime  | Job start time                                               |
-| `finished_at`              | datetime  | Job end time                                                 |
-| `duration_ms`              | integer   | Milliseconds (monotonic)                                     |
-| `error`                    | text      | Error message when failed                                    |
-| `meta`                     | jsonb     | E.g. `{"cascade":false,"if_exists":true,"view":"public.mv"}` |
-| `created_at`, `updated_at` | datetime  | Timestamps                                                   |
-
-Index: `index_mat_view_delete_runs_on_mat_view_definition_id`
-
----
+Index: `index_mat_view_runs_on_mat_view_definition_id`
 
 ## Relationships (diagram)
 
 ```mermaid
 erDiagram
-  MAT_VIEW_DEFINITIONS ||--o{ MAT_VIEW_CREATE_RUNS  : has
-  MAT_VIEW_DEFINITIONS ||--o{ MAT_VIEW_REFRESH_RUNS : has
-  MAT_VIEW_DEFINITIONS ||--o{ MAT_VIEW_DELETE_RUNS  : has
+  MAT_VIEW_DEFINITIONS ||--o{ MAT_VIEW_RUNS  : has
 
   MAT_VIEW_DEFINITIONS {
     bigint id PK
@@ -108,33 +78,11 @@ erDiagram
     jsonb  unique_index_columns
   }
 
-  MAT_VIEW_CREATE_RUNS {
+  MAT_VIEW_RUNS {
     bigint id PK
     bigint mat_view_definition_id FK
     int    status
-    datetime started_at
-    datetime finished_at
-    int    duration_ms
-    text   error
-    jsonb  meta
-  }
-
-  MAT_VIEW_REFRESH_RUNS {
-    bigint id PK
-    bigint mat_view_definition_id FK
-    int    status
-    datetime started_at
-    datetime finished_at
-    int    duration_ms
-    int    rows_count
-    text   error
-    jsonb  meta
-  }
-
-  MAT_VIEW_DELETE_RUNS {
-    bigint id PK
-    bigint mat_view_definition_id FK
-    int    status
+    int    operation
     datetime started_at
     datetime finished_at
     int    duration_ms
@@ -164,15 +112,15 @@ Each job follows the same high-level flow:
 ## Reading runs (Rails)
 
 ```ruby
-# Latest refresh run for a view
+# Latest run for a view
 defn = MatViews::MatViewDefinition.find_by!(name: "mv_user_activity")
-last_run = MatViews::MatViewRefreshRun
+last_run = MatViews::MatViewRun
   .where(mat_view_definition_id: defn.id)
   .order(created_at: :desc)
   .first
 
 if last_run&.status_success?
-  puts "Last refresh OK in #{last_run.duration_ms} ms, rows=#{last_run.rows_count}"
+  puts "Last refresh OK in #{last_run.duration_ms} ms, rows=#{last_run.row_count}"
 else
   puts "Last refresh failed: #{last_run&.error}"
 end
@@ -180,7 +128,7 @@ end
 
 ```ruby
 # Last N runs (any type), newest first
-runs = MatViews::MatViewRefreshRun
+runs = MatViews::MatViewRun
          .where(mat_view_definition_id: defn.id)
          .order(created_at: :desc)
          .limit(20)
@@ -192,10 +140,10 @@ runs = MatViews::MatViewRefreshRun
 
 A few handy snippets to power dashboards or reports:
 
-### Refresh duration stats (per view)
+### duration stats (per view)
 
 ```ruby
-MatViews::MatViewRefreshRun
+MatViews::MatViewRun
   .joins(:mat_view_definition)
   .where(status: :success)
   .group("mat_view_definitions.name")
@@ -212,18 +160,18 @@ MatViews::MatViewRefreshRun
 ### Failure counts (last 24h)
 
 ```ruby
-MatViews::MatViewRefreshRun
+MatViews::MatViewRun
   .where(status: :failed)
   .where("created_at >= ?", 24.hours.ago)
   .group(:mat_view_definition_id)
   .count
 ```
 
-### Latest rows_count (if tracked)
+### Latest row_count (if tracked)
 
 ```ruby
-MatViews::MatViewRefreshRun
-  .select("DISTINCT ON (mat_view_definition_id) mat_view_definition_id, rows_count, created_at")
+MatViews::MatViewRun
+  .select("DISTINCT ON (mat_view_definition_id) mat_view_definition_id, meta->>'row_count' AS row_count", created_at")
   .where(status: :success)
   .order("mat_view_definition_id, created_at DESC")
 ```
@@ -232,9 +180,8 @@ MatViews::MatViewRefreshRun
 
 ## Dashboards & alerts
 
-- **Dashboards:** chart `duration_ms` over time per view; show last status & rows_count.
+- **Dashboards:** chart `duration_ms` over time per view; show last status & row_count.
 - **SLOs:** alert on `failed` refreshes, or on unusually high `duration_ms` (e.g., 2× moving average).
-- **Freshness:** display `last_refreshed_at` (if you maintain it on the definition) or derive it from the latest successful refresh run’s `finished_at`.
 
 ---
 
@@ -252,12 +199,12 @@ Example (Postgres SQL):
 WITH ranked AS (
   SELECT id, mat_view_definition_id,
          ROW_NUMBER() OVER (PARTITION BY mat_view_definition_id, status ORDER BY created_at DESC) AS rn
-  FROM mat_view_refresh_runs
+  FROM mat_view_runs
   WHERE status = 2 -- success
 )
-DELETE FROM mat_view_refresh_runs
+DELETE FROM mat_view_runs
 USING ranked
-WHERE mat_view_refresh_runs.id = ranked.id
+WHERE mat_view_runs.id = ranked.id
   AND ranked.rn > 500;
 ```
 
