--- a/docs/pages/5.3 services.md
+++ b/docs/pages/5.3 services.md
@@ -56,7 +56,7 @@ Services return a `MatViews::ServiceResponse` (value object). Pattern:
 response = service.run
 response.success? # => true
 response.status   # => :updated
-response.payload  # => { view: "public.mv_user_activity", rows_count: 123 } # varies by service
+response.payload  # => { view: "public.mv_user_activity", row_count: 123 } # varies by service
 response.meta     # => { sql: 'REFRESH ...', row_count_strategy: :estimated }
 
 # error
@@ -125,7 +125,7 @@ MatViews::Services::RegularRefresh.new(defn, row_count_strategy: :estimated).run
 #### Success response
 
 - `status: :updated`
-- `payload: { view: "schema.rel", rows_count: <int or nil> }`
+- `payload: { view: "schema.rel", row_count: <int or nil> }`
 - `meta: { sql: 'REFRESH MATERIALIZED VIEW ...', row_count_strategy: :estimated }`
 
 #### Errors
@@ -241,10 +241,10 @@ MatViews::Services::DeleteView.new(defn, cascade: false, if_exists: true).run
 
 Jobs wrap services, **measure duration**, and record runs:
 
-- **Create:** `MatViews::CreateViewJob` → `mat_view_create_runs`
-- **Refresh:** `MatViews::RefreshViewJob` → `mat_view_refresh_runs`
+- **Create:** `MatViews::CreateViewJob` → `mat_view_runs` with `operation: :create`
+- **Refresh:** `MatViews::RefreshViewJob` → `mat_view_runs` with `operation: :refresh`
   (selects `RegularRefresh` / `ConcurrentRefresh` / `SwapRefresh` based on `defn.refresh_strategy`)
-- **Delete:** `MatViews::DeleteViewJob` → `mat_view_delete_runs`
+- **Delete:** `MatViews::DeleteViewJob` → `mat_view_runs` with `operation: :drop`
 
 **Enqueue via adapter** (the adapter uses the backend you configured—**no guessing**):
 
