--- a/docs/pages/5.4 jobs-and-adapters.md
+++ b/docs/pages/5.4 jobs-and-adapters.md
@@ -26,10 +26,10 @@ The **Adapter** is a single, stable API used everywhere in this project (rake ta
   ```
 
 - The adapter **does not guess** a backend; it assumes your project’s job system is already configured.
-- Jobs create/update **run tables**:
-  - Create → `mat_view_create_runs`
-  - Refresh → `mat_view_refresh_runs`
-  - Delete → `mat_view_delete_runs`
+- Jobs create/update **run table**:
+  - Create → `mat_view_runs` with `operation: :create`
+  - Refresh → `mat_view_runs` with `operation: :refresh`
+  - Delete → `mat_view_runs` with `operation: :drop`
 
 ---
 
@@ -69,7 +69,7 @@ Each job wraps a service, measures **duration**, and writes a run row.
 
 **Class:** `MatViews::CreateViewJob`
 **Performs:** `MatViews::Services::CreateView`
-**Run table:** `mat_view_create_runs`
+**Run table:** `mat_view_runs` with `operation: :create`
 
 **Signature:**
 
@@ -104,7 +104,7 @@ MatViews::CreateViewJob.perform_later(defn.id, force: true)
 
 **Class:** `MatViews::RefreshViewJob`
 **Performs:** strategy-specific service based on `definition.refresh_strategy`
-**Run table:** `mat_view_refresh_runs`
+**Run table:** `mat_view_runs` with `operation: :refresh`
 
 **Service mapping:**
 
@@ -143,7 +143,7 @@ MatViews::RefreshViewJob.perform_later(defn.id, row_count_strategy: :estimated)
 
 **Class:** `MatViews::DeleteViewJob`
 **Performs:** `MatViews::Services::DeleteView`
-**Run table:** `mat_view_delete_runs`
+**Run table:** `mat_view_runs` with `operation: :drop`
 
 **Signature:**
 
@@ -181,7 +181,7 @@ Jobs record to run tables with consistent fields:
 - `started_at`, `finished_at`, `duration_ms`
 - `error` (string, when failed)
 - `meta` (JSON: includes service payload/options, e.g., `view`, `row_count_strategy`, `cascade`, SQL, etc.)
-- For refresh runs: `rows_count` when a row count strategy is used.
+- For refresh runs: `row_count` when a row count strategy is used.
 
 {: .note}
 
