--- a/docs/pages/101-faq.md
+++ b/docs/pages/101-faq.md
@@ -38,6 +38,19 @@ FROM pg_stat_activity
 WHERE query ILIKE '%mv_user_activity%'
 ORDER BY query_start;
 ```
+**Latest run status per view (create):**
+```sql
+SELECT d.name, r.status, r.duration_ms, r.finished_at
+FROM mat_view_definitions d
+LEFT JOIN LATERAL (
+  SELECT * FROM mat_view_runs r
+  WHERE r.mat_view_definition_id = d.id
+  AND r.operation = 'create'
+  ORDER BY r.created_at DESC
+  LIMIT 1
+) r ON true
+ORDER BY d.name;
+```
 
 **Latest run status per view (refresh):**
 
@@ -45,14 +58,41 @@ ORDER BY query_start;
 SELECT d.name, r.status, r.duration_ms, r.finished_at
 FROM mat_view_definitions d
 LEFT JOIN LATERAL (
-  SELECT * FROM mat_view_refresh_runs r
+  SELECT * FROM mat_view_runs r
   WHERE r.mat_view_definition_id = d.id
+  AND r.operation = 'refresh'
   ORDER BY r.created_at DESC
   LIMIT 1
 ) r ON true
 ORDER BY d.name;
 ```
 
+**Latest run status per view (drop):**
+```sql
+SELECT d.name, r.status, r.duration_ms, r.finished_at
+FROM mat_view_definitions d
+LEFT JOIN LATERAL (
+  SELECT * FROM mat_view_runs r
+  WHERE r.mat_view_definition_id = d.id
+  AND r.operation = 'drop'
+  ORDER BY r.created_at DESC
+  LIMIT 1
+) r ON true
+ORDER BY d.name;
+```
+
+**Latest run status per view (all):**
+```sql
+SELECT d.name, r.status, r.duration_ms, r.finished_at
+FROM mat_view_definitions d
+LEFT JOIN LATERAL (
+  SELECT * FROM mat_view_runs r
+  WHERE r.mat_view_definition_id = d.id
+  ORDER BY r.created_at DESC
+  LIMIT 1
+) r ON true
+ORDER BY d.name;
+```
 ---
 
 ## General
@@ -186,9 +226,9 @@ ORDER BY d.name;
 ### “Do jobs record results anywhere?”
 
 - Yes. Each job writes a run row:
-  - Create → `mat_view_create_runs`
-  - Refresh → `mat_view_refresh_runs`
-  - Delete → `mat_view_delete_runs`
+  - Create → `mat_view_runs` with `operation: :create`
+  - Refresh → `mat_view_runs` with `operation: :refresh`
+  - Delete → `mat_view_runs` with `operation: :drop`
 
 - They include `status`, `started_at`, `finished_at`, `duration_ms`, `error`, and `meta`.
 
