refactor: Improve job and service architecture
Refactors the jobs and services architecture to improve observability, error handling, and code structure.

- Introduces a new `ApplicationJob` base class to centralize run recording, timing, and error handling logic, reducing duplication in create, refresh, and delete jobs.
- Standardizes the `ServiceResponse` object by replacing `payload` and `meta` with distinct `request` and `response` attributes for clearer data flow.
- Enhances error reporting by storing structured error details (class, message, backtrace) in the `mat_view_runs` table instead of a simple string.
- Implements a consistent execution pattern for all services (`prepare`, `run`, `assign_request`) via a refactored `BaseService`.
- Adds `reek` to the CI pipeline to enforce code quality and smell detection.
- Updates documentation to reflect the new service response structure and improved row count tracking.

--- a/docs/pages/5.2 runs.md
+++ b/docs/pages/5.2 runs.md
@@ -9,9 +9,9 @@ permalink: /engine/runs
 
 Every materialized-view operation is recorded in a dedicated table so you can **audit**, **debug**, and **measure** performance over time.
 
-- **Create runs:**  `MatViews::MatViewRun`, operation type `:create`
+- **Create runs:** `MatViews::MatViewRun`, operation type `:create`
 - **Refresh runs:** `MatViews::MatViewRun`, operation type `:refresh`
-- **Delete runs:**  `MatViews::MatViewRun`, operation type `:delete`
+- **Delete runs:** `MatViews::MatViewRun`, operation type `:delete`
 
 {: .note}
 
@@ -50,17 +50,17 @@ Below are the essential columns for each run table.
 
 `MatViews::MatViewRun` has the following key attributes (columns):
 
-| Column                     | Type      | Notes                             |
-| -------------------------- | --------- | --------------------------------- |
-| `mat_view_definition_id`   | bigint FK | Required                          |
-| `status`                   | integer   | `pending/running/success/failed`  |
-| `operation`                | integer   | `create/refresh/drop`             |
-| `started_at`               | datetime  | Job start time                    |
-| `finished_at`              | datetime  | Job end time                      |
-| `duration_ms`              | integer   | Milliseconds (monotonic)          |
-| `error`                    | text      | Error message when failed         |
-| `meta`                     | jsonb     | Free-form: service payload/params |
-| `created_at`, `updated_at` | datetime  | Timestamps                        |
+| Column                     | Type      | Notes                                        |
+| -------------------------- | --------- | -------------------------------------------- |
+| `mat_view_definition_id`   | bigint FK | Required                                     |
+| `status`                   | integer   | `pending/running/success/failed`             |
+| `operation`                | integer   | `create/refresh/drop`                        |
+| `started_at`               | datetime  | Job start time                               |
+| `finished_at`              | datetime  | Job end time                                 |
+| `duration_ms`              | integer   | Milliseconds (monotonic)                     |
+| `error`                    | jsonb     | Error details (:message, :class, :backtrace) |
+| `meta`                     | jsonb     | service (:request, :response)                |
+| `created_at`, `updated_at` | datetime  | Timestamps                                   |
 
 Index: `index_mat_view_runs_on_mat_view_definition_id`
 
@@ -86,7 +86,7 @@ erDiagram
     datetime started_at
     datetime finished_at
     int    duration_ms
-    text   error
+    jsonb   error
     jsonb  meta
   }
 ```
@@ -120,9 +120,12 @@ last_run = MatViews::MatViewRun
   .first
 
 if last_run&.status_success?
-  puts "Last refresh OK in #{last_run.duration_ms} ms, rows=#{last_run.row_count}"
+  puts "Last refresh OK in #{last_run.duration_ms} ms, rows-before=#{last_run.row_count_before}, rows-after=#{last_run.row_count_after}"
 else
-  puts "Last refresh failed: #{last_run&.error}"
+  puts "Last refresh failed: #{last_run&.error&.dig('message') || 'no runs yet'}"
+  puts "Error class: #{last_run&.error&.dig('class') || 'N/A'}"
+  puts "Backtrace:"
+  puts last_run&.error&.dig('backtrace')&.join("\n")
 end
 ```
 
@@ -167,11 +170,22 @@ MatViews::MatViewRun
   .count
 ```
 
-### Latest row_count (if tracked)
+### Latest row_counts (if tracked)
+
+#### row_count_before
 
 ```ruby
 MatViews::MatViewRun
-  .select("DISTINCT ON (mat_view_definition_id) mat_view_definition_id, meta->>'row_count' AS row_count", created_at")
+  .select("DISTINCT ON (mat_view_definition_id) mat_view_definition_id, meta->>'row_count_before' AS row_count_before, created_at")
+  .where(status: :success)
+  .order("mat_view_definition_id, created_at DESC")
+```
+
+#### row_count_after
+
+```ruby
+MatViews::MatViewRun
+  .select("DISTINCT ON (mat_view_definition_id) mat_view_definition_id, meta->>'row_count_after' AS row_count_after, created_at")
   .where(status: :success)
   .order("mat_view_definition_id, created_at DESC")
 ```
@@ -180,7 +194,7 @@ MatViews::MatViewRun
 
 ## Dashboards & alerts
 
-- **Dashboards:** chart `duration_ms` over time per view; show last status & row_count.
+- **Dashboards:** chart `duration_ms` over time per view; show last status & row_counts.
 - **SLOs:** alert on `failed` refreshes, or on unusually high `duration_ms` (e.g., 2× moving average).
 
 ---
