--- a/docs/pages/5.3 services.md
+++ b/docs/pages/5.3 services.md
@@ -54,16 +54,26 @@ Services return a `MatViews::ServiceResponse` (value object). Pattern:
 # payload: always includes :view => "schema.rel"
 # meta: operation details (e.g., :sql, options)
 response = service.run
-response.success? # => true
-response.status   # => :updated
-response.payload  # => { view: "public.mv_user_activity", row_count: 123 } # varies by service
-response.meta     # => { sql: 'REFRESH ...', row_count_strategy: :estimated }
+response.success?         # => true
+response.status           # => :updated
+response.meta[:response]  # => { view: "public.mv_user_activity", row_count_before: 123, row_count_after: 123 } # varies by service
+response.meta[:request]   # => { row_count_strategy: :estimated, ... } # varies by service
 
 # error
 response.error?   # => true
-response.error    # => "PG::Error: ..."
-response.meta     # => { sql: '...', backtrace: [...] }
+response.error    # => { message: "...", class: "...", backtrace: [...] } # always present on error
+response.meta     # => { :request, :response } # varies by service
 ```
+
+### Row count strategies
+
+| Strategy  | Symbol          | Description                              | Perf                 |
+| --------- | --------------- | ---------------------------------------- | -------------------- |
+| Estimated | `:estimated`    | Reads `pg_class.reltuples` (approximate) | Fast                 |
+| Exact     | `:exact`        | `SELECT COUNT(*) FROM "schema"."rel"`    | Accurate but heavier |
+| None      | `:none` or`nil` | Skip counting                            | Fastest              |
+
+{: .note}
 
 > Jobs record duration and persist run rows. Services may include meta fields like `:sql` or options, but **jobs** are the canonical place for timing/observability.
 
@@ -77,20 +87,21 @@ response.meta     # => { sql: '...', backtrace: [...] }
 ### API
 
 ```ruby
-MatViews::Services::CreateView.new(defn, force: false).run
+MatViews::Services::CreateView.new(defn, force: false, row_count_strategy: :extact).run
 ```
 
 #### Options
 
-| Option  |    Type | Default | Meaning                                                                           |
-| ------- | ------: | ------: | --------------------------------------------------------------------------------- |
-| `force` | Boolean | `false` | Drop and recreate if the view already exists (service handles quoting/existence). |
+| Option               |          Type | values |   Default | Meaning |
+| -------------------- | ------------: | -----: | --------: | ------- | --------------------------------------------- | ------- | ----------------------------------- |
+| `force`              |       Boolean |  `true |    false` | `false` | Drop and recreate if the view already exists. |
+| `row_count_strategy` | Symbol or nil | `:none | :estimate | :extact | nil`                                          | `:none` | If set, counts rows after creation. |
 
 #### Success response
 
 - `status: :created`
-- `payload: { view: "schema.rel" }`
-- `meta: { sql: "CREATE MATERIALIZED VIEW ...", force: false }`
+- `meta[:request] { row_count_strategy: :estimated, force: true }`
+- `meta[:response] { sql: ['...'], view: 'schema.rel', row_count_before: -1, row_count_after: 123 }`
 
 #### Errors
 
@@ -108,31 +119,29 @@ Refresh picks the exact strategy at the **job** level based on `defn.refresh_str
 **Class:** `MatViews::Services::RegularRefresh`
 **SQL:** `REFRESH MATERIALIZED VIEW "schema"."rel"`
 
-#### Row count strategies
-
-| Strategy  | Symbol       | Description                              | Perf                 |
-| --------- | ------------ | ---------------------------------------- | -------------------- |
-| Estimated | `:estimated` | Reads `pg_class.reltuples` (approximate) | Fast                 |
-| Exact     | `:exact`     | `SELECT COUNT(*) FROM "schema"."rel"`    | Accurate but heavier |
-| None      | `nil`        | Skip counting                            | Fastest              |
-
 #### API
 
 ```ruby
 MatViews::Services::RegularRefresh.new(defn, row_count_strategy: :estimated).run
 ```
 
+#### Options
+
+| Option               |          Type | values |   Default | Meaning |
+| -------------------- | ------------: | -----: | --------: | ------- | ---- | ------- | ----------------------------------- |
+| `row_count_strategy` | Symbol or nil | `:none | :estimate | :extact | nil` | `:none` | If set, counts rows after creation. |
+
 #### Success response
 
 - `status: :updated`
-- `payload: { view: "schema.rel", row_count: <int or nil> }`
-- `meta: { sql: 'REFRESH MATERIALIZED VIEW ...', row_count_strategy: :estimated }`
+- `meta[:request] { row_count_strategy: :estimated }`
+- `meta[:response] { sql: ['REFRESH MATERIALIZED VIEW ...'], view: 'schema.rel', row_count_before: 123, row_count_after: 123 }`
 
 #### Errors
 
 - Invalid `name`.
 - View does not exist (pre-check).
-- DB errors are wrapped with `meta[:sql]` and backtrace.
+- DB errors from `REFRESH` (syntax, permission, timeout, etc.).
 
 ---
 
@@ -140,7 +149,6 @@ MatViews::Services::RegularRefresh.new(defn, row_count_strategy: :estimated).run
 
 **Class:** `MatViews::Services::ConcurrentRefresh`
 **SQL:** `REFRESH MATERIALIZED VIEW CONCURRENTLY "schema"."rel"`
-
 **Requirement:** A **unique index** covering all rows on the MV.
 
 #### API
@@ -148,6 +156,12 @@ MatViews::Services::RegularRefresh.new(defn, row_count_strategy: :estimated).run
 ```ruby
 MatViews::Services::ConcurrentRefresh.new(defn, row_count_strategy: :estimated).run
 ```
+
+#### Options
+
+| Option               |          Type | values |   Default | Meaning |
+| -------------------- | ------------: | -----: | --------: | ------- | ---- | ------- | ----------------------------------- |
+| `row_count_strategy` | Symbol or nil | `:none | :estimate | :extact | nil` | `:none` | If set, counts rows after creation. |
 
 #### What the service checks
 
@@ -158,13 +172,18 @@ MatViews::Services::ConcurrentRefresh.new(defn, row_count_strategy: :estimated).
 #### Success response
 
 - `status: :updated`
-- `payload` / `meta` similar to regular
+- `meta[:request] { row_count_strategy: :estimated, concurrent: true }`
+- `meta[:response] { sql: ['REFRESH MATERIALIZED VIEW ...'], view: 'schema.rel', row_count_before: 123, row_count_after: 123 }`
 
 #### Errors
 
+- Invalid `name`.
+- View does not exist (pre-check).
+- DB errors from `REFRESH` (syntax, permission, timeout, etc.).
 - No unique index → helpful error explaining requirement.
 - `PG::ObjectInUse` / other concurrency conditions → returned as an error with advice to retry.
-- Same error wrapping as regular refresh.
+
+{: .note}
 
 > Tip: Refresh concurrency pairs well with **small, frequent** refreshes and a good autovacuum/ANALYZE cadence.
 
@@ -190,15 +209,21 @@ MatViews::Services::ConcurrentRefresh.new(defn, row_count_strategy: :estimated).
 MatViews::Services::SwapRefresh.new(defn, row_count_strategy: :estimated).run
 ```
 
-#### When to use
+#### Options
 
-- You can’t use `CONCURRENTLY` (no unique key) but need low read disruption.
-- You want to rebuild with complex SQL while keeping the old view intact until swap.
+| Option               |          Type | values |   Default | Meaning |
+| -------------------- | ------------: | -----: | --------: | ------- | ---- | ------- | ----------------------------------- |
+| `row_count_strategy` | Symbol or nil | `:none | :estimate | :extact | nil` | `:none` | If set, counts rows after creation. |
 
 #### Errors
 
 - Any step failure returns a wrapped error (with `meta[:sql]` where relevant).
 - Ensure your service replays **index/permission recreation** deterministically.
+
+#### When to use
+
+- You can’t use `CONCURRENTLY` (no unique key) but need low read disruption.
+- You want to rebuild with complex SQL while keeping the old view intact until swap.
 
 ---
 
@@ -215,12 +240,12 @@ MatViews::Services::DeleteView.new(defn, cascade: false, if_exists: true).run
 
 ### Options
 
-| Option      |    Type | Default | Meaning                                                                              |
-| ----------- | ------: | ------: | ------------------------------------------------------------------------------------ |
-| `cascade`   | Boolean | `false` | Use `CASCADE`. Otherwise `RESTRICT` (error if dependents exist).                     |
-| `if_exists` | Boolean |  `true` | Use `IF EXISTS`. If `true` and missing → `:skipped`. If `false` and missing → error. |
+| Option               |          Type | values |   Default | Meaning |
+| -------------------- | ------------: | -----: | --------: | ------- | ----------------------------------- | ------- | ----------------------------------- |
+| `cascade`            |       Boolean |  `true |    false` | `false` | Use `CASCADE`. Otherwise `RESTRICT` |
+| `row_count_strategy` | Symbol or nil | `:none | :estimate | :extact | nil`                                | `:none` | If set, counts rows after creation. |
 
-### Success responses
+### Success response
 
 - `status: :deleted` (when dropped)
 - `status: :skipped` (not present, `if_exists: true`)
@@ -298,7 +323,7 @@ defn = MatViews::MatViewDefinition.find_by!(name: 'mv_expensive_agg')
 MatViews::RefreshViewJob.perform_later(defn.id, row_count_strategy: :exact) # job will pick SwapRefresh
 ```
 
-### Delete (idempotent by default)
+### Delete
 
 ```ruby
 defn = MatViews::MatViewDefinition.find_by!(name: 'mv_temp')
