--- a/docs/pages/5.4 jobs-and-adapters.md
+++ b/docs/pages/5.4 jobs-and-adapters.md
@@ -180,8 +180,10 @@ Jobs record to run tables with consistent fields:
 - `status`: `running | success | failed`
 - `started_at`, `finished_at`, `duration_ms`
 - `error` (string, when failed)
-- `meta` (JSON: includes service payload/options, e.g., `view`, `row_count_strategy`, `cascade`, SQL, etc.)
-- For refresh runs: `row_count` when a row count strategy is used.
+- `meta` (JSON: includes service :request, :response)
+  - `request`: input args, options
+  - `response`: service status, payload (e.g., view), meta (e.g SQL, strategies)
+- `operation`: `create | refresh | drop`
 
 {: .note}
 
