--- a/docs/pages/5.5 rake-tasks.md
+++ b/docs/pages/5.5 rake-tasks.md
@@ -204,7 +204,7 @@ The tasks are implemented in `lib/tasks/mat_views_tasks.rake` and rely on `MatVi
 - `confirm!(message, skip:)` — logs and prompts (or skips with `--yes` / `YES=1`)
 - `find_definition_by_name!` — resolves names (definition vs schema-qualified MV)
 - `parse_force?`, `parse_row_count_strategy`, `parse_cascade?` — boolean/enum parsing
-- `enqueue_create!`, `enqueue_refresh!`, `enqueue_delete!` — adapter calls
+- `enqueue_create`, `enqueue_refresh`, `enqueue_delete` — adapter calls
 
 ---
 
