refactor: Prefix exception serialization method and fix typos
Renames the `serialize_error` method on `Exception` to `mv_serialize_error` to prevent potential conflicts with other gems or frameworks.

Updates documentation and tests to correct typos in option names and test data. Also improves the formatting of documentation tables for better readability and adds vendor directories to the RuboCop exclusion list.

--- a/docs/pages/5.3 services.md
+++ b/docs/pages/5.3 services.md
@@ -87,15 +87,15 @@ response.meta     # => { :request, :response } # varies by service
 ### API
 
 ```ruby
-MatViews::Services::CreateView.new(defn, force: false, row_count_strategy: :extact).run
+MatViews::Services::CreateView.new(defn, force: false, row_count_strategy: :exact).run
 ```
 
 #### Options
 
-| Option               |          Type | values |   Default | Meaning |
-| -------------------- | ------------: | -----: | --------: | ------- | --------------------------------------------- | ------- | ----------------------------------- |
-| `force`              |       Boolean |  `true |    false` | `false` | Drop and recreate if the view already exists. |
-| `row_count_strategy` | Symbol or nil | `:none | :estimate | :extact | nil`                                          | `:none` | If set, counts rows after creation. |
+| Option               | Type          | values                                  | Default | Meaning                                       |
+| -------------------- | ------------- | --------------------------------------- | ------- | --------------------------------------------- |
+| `force`              | Boolean       | `true or false`                         | `false` | Drop and recreate if the view already exists. |
+| `row_count_strategy` | Symbol or nil | `:none or :estimated or :exact  or nil` | `:none` | If set, counts rows after creation.           |
 
 #### Success response
 
@@ -127,9 +127,9 @@ MatViews::Services::RegularRefresh.new(defn, row_count_strategy: :estimated).run
 
 #### Options
 
-| Option               |          Type | values |   Default | Meaning |
-| -------------------- | ------------: | -----: | --------: | ------- | ---- | ------- | ----------------------------------- |
-| `row_count_strategy` | Symbol or nil | `:none | :estimate | :extact | nil` | `:none` | If set, counts rows after creation. |
+| Option               | Type          | values                                  | Default | Meaning                             |
+| -------------------- | ------------- | --------------------------------------- | ------- | ----------------------------------- |
+| `row_count_strategy` | Symbol or nil | `:none or :estimated or :exact  or nil` | `:none` | If set, counts rows after creation. |
 
 #### Success response
 
@@ -159,9 +159,9 @@ MatViews::Services::ConcurrentRefresh.new(defn, row_count_strategy: :estimated).
 
 #### Options
 
-| Option               |          Type | values |   Default | Meaning |
-| -------------------- | ------------: | -----: | --------: | ------- | ---- | ------- | ----------------------------------- |
-| `row_count_strategy` | Symbol or nil | `:none | :estimate | :extact | nil` | `:none` | If set, counts rows after creation. |
+| Option               | Type          | values                                  | Default | Meaning                             |
+| -------------------- | ------------- | --------------------------------------- | ------- | ----------------------------------- |
+| `row_count_strategy` | Symbol or nil | `:none or :estimated or :exact  or nil` | `:none` | If set, counts rows after creation. |
 
 #### What the service checks
 
@@ -211,9 +211,9 @@ MatViews::Services::SwapRefresh.new(defn, row_count_strategy: :estimated).run
 
 #### Options
 
-| Option               |          Type | values |   Default | Meaning |
-| -------------------- | ------------: | -----: | --------: | ------- | ---- | ------- | ----------------------------------- |
-| `row_count_strategy` | Symbol or nil | `:none | :estimate | :extact | nil` | `:none` | If set, counts rows after creation. |
+| Option               | Type          | values                                  | Default | Meaning                             |
+| -------------------- | ------------- | --------------------------------------- | ------- | ----------------------------------- |
+| `row_count_strategy` | Symbol or nil | `:none or :estimated or :exact  or nil` | `:none` | If set, counts rows after creation. |
 
 #### Errors
 
@@ -240,10 +240,10 @@ MatViews::Services::DeleteView.new(defn, cascade: false, if_exists: true).run
 
 ### Options
 
-| Option               |          Type | values |   Default | Meaning |
-| -------------------- | ------------: | -----: | --------: | ------- | ----------------------------------- | ------- | ----------------------------------- |
-| `cascade`            |       Boolean |  `true |    false` | `false` | Use `CASCADE`. Otherwise `RESTRICT` |
-| `row_count_strategy` | Symbol or nil | `:none | :estimate | :extact | nil`                                | `:none` | If set, counts rows after creation. |
+| Option               | Type          | values                                  | Default | Meaning                             |
+| -------------------- | ------------- | --------------------------------------- | ------- | ----------------------------------- |
+| `cascade`            | Boolean       | `true or false`                         | `false` | Use `CASCADE`. Otherwise `RESTRICT` |
+| `row_count_strategy` | Symbol or nil | `:none or :estimated or :exact  or nil` | `:none` | If set, counts rows after creation. |
 
 ### Success response
 
