feat: Add row count strategy to create and delete tasks
Adds the `row_count_strategy` parameter to all `create` and `delete` Rake tasks, allowing control over row counting during these operations. This aligns them with the existing `refresh` tasks.

The default `row_count_strategy` for all services and Rake tasks is changed from `:estimated` to `:none` to make row counting an explicit, opt-in action.

Updates documentation and tests to reflect these changes.

--- a/docs/pages/5.5 rake-tasks.md
+++ b/docs/pages/5.5 rake-tasks.md
@@ -25,9 +25,20 @@ The engine ships a set of **Rake tasks** for creating, refreshing, and deleting 
 
 ### Create
 
-- `mat_views:create_by_name[view_name, force, --yes]`
-- `mat_views:create_by_id[definition_id, force, --yes]`
-- `mat_views:create_all[force, --yes]`
+- `mat_views:create_by_name[view_name, force, row_count_strategy, --yes]`
+- `mat_views:create_by_id[definition_id, force, row_count_strategy, --yes]`
+- `mat_views:create_all[force, row_count_strategy, --yes]`
+
+`force` is boolean-ish:
+- `false` (default) → `CREATE MATERIALIZED VIEW ...` (fails if exists)
+- `true` → `CREATE OR REPLACE MATERIALIZED VIEW ...` (drops first if exists)
+
+`row_count_strategy` can be:
+
+- `none` (default; skips counting)
+- `estimated` (fast, uses `reltuples`)
+- `exact` (uses `COUNT(*)`)
+- blank to skip counting (if you pass nothing)
 
 ### Refresh
 
@@ -37,20 +48,28 @@ The engine ships a set of **Rake tasks** for creating, refreshing, and deleting 
 
 `row_count_strategy` can be:
 
-- `estimated` (default; fast, uses `reltuples`)
+- `none` (default; skips counting)
+- `estimated` (fast, uses `reltuples`)
 - `exact` (uses `COUNT(*)`)
 - blank to skip counting (if you pass nothing)
 
 ### Delete
 
-- `mat_views:delete_by_name[view_name, cascade, --yes]`
-- `mat_views:delete_by_id[definition_id, cascade, --yes]`
-- `mat_views:delete_all[cascade, --yes]`
+- `mat_views:delete_by_name[view_name, cascade, row_count_strategy, --yes]`
+- `mat_views:delete_by_id[definition_id, cascade, row_count_strategy, --yes]`
+- `mat_views:delete_all[cascade, row_count_strategy, --yes]`
 
 `cascade` is boolean-ish:
 
 - `false` (default) → `RESTRICT` (fails if dependents exist)
 - `true` → `CASCADE`
+
+`row_count_strategy` can be:
+
+- `none` (default; skips counting)
+- `estimated` (fast, uses `reltuples`)
+- `exact` (uses `COUNT(*)`)
+- blank to skip counting (if you pass nothing)
 
 ---
 
