docs: Correct Rake task examples in documentation
Removes unnecessary commas from several Rake task examples. This change ensures the documented commands are cleaner and more accurate.

--- a/docs/pages/4.2 usage-views.md
+++ b/docs/pages/4.2 usage-views.md
@@ -175,7 +175,7 @@ You can also use the provided Rake tasks to delete materialized views by name, i
 # Delete by name
 bundle exec rake mat_views:delete_by_name\[my_mat_view,cascade,row_count_strategy,--yes]
 # Delete by id
-bundle exec rake mat_views:delete_by_id\[1,cascade,row_count_strategy,,--yes]
+bundle exec rake mat_views:delete_by_id\[1,cascade,row_count_strategy,--yes]
 # Delete all
-bundle exec rake mat_views:delete_all\[cascade,row_count_strategy,,--yes]
+bundle exec rake mat_views:delete_all\[cascade,row_count_strategy,--yes]
 ```
