--- a/docs/pages/5.5 rake-tasks.md
+++ b/docs/pages/5.5 rake-tasks.md
@@ -126,7 +126,7 @@ Tasks accept **positional args** and optional **env** overrides:
 
 ```bash
 # Create by name (no force), skip confirm
-bin/rake 'mat_views:create_by_name[mv_user_activity,,--yes]'
+bin/rake 'mat_views:create_by_name[mv_user_activity,--yes]'
 
 # Create by id with force=true, skip confirm
 bin/rake 'mat_views:create_by_id[42,true,--yes]'
@@ -142,7 +142,7 @@ YES=1 FORCE=true bin/rake 'mat_views:create_by_name[mv_user_activity]'
 
 ```bash
 # Refresh by name with default row_count_strategy (:estimated), skip confirm
-bin/rake 'mat_views:refresh_by_name[mv_user_activity,,--yes]'
+bin/rake 'mat_views:refresh_by_name[mv_user_activity,--yes]'
 
 # Refresh by id with exact row count, skip confirm
 bin/rake 'mat_views:refresh_by_id[42,exact,--yes]'
@@ -158,7 +158,7 @@ YES=1 ROW_COUNT_STRATEGY=exact bin/rake 'mat_views:refresh_by_name[mv_user_activ
 
 ```bash
 # Delete by name with cascade=false (default), skip confirm
-bin/rake 'mat_views:delete_by_name[mv_user_activity,,--yes]'
+bin/rake 'mat_views:delete_by_name[mv_user_activity,--yes]'
 
 # Delete by id with cascade=true, skip confirm
 bin/rake 'mat_views:delete_by_id[42,true,--yes]'
